--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:textSize="23.0sp"
             android:layout_marginTop="10.0dip"
-            android:layout_marginLeft="10.0dip"
+            android:layout_marginLeft="14.0dip"
             android:text="@string/app_name"/>
         <Button
             android:id="@id/titlebar_refresh"
@@ -50,15 +50,22 @@
         <HorizontalScrollView
             android:id="@id/category_scrollview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8.0dip"
+            android:scrollbars="none"
+            android:layout_toLeftOf="@id/category_arrow_right"
+            android:layout_centerVertical="true"
+            >
 
             <LinearLayout
                 android:id="@id/category_layout"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                />
+                android:orientation="horizontal"/>
+
+
+
             </HorizontalScrollView>
 
         </RelativeLayout>
@@ -69,7 +76,6 @@
         android:listSelector="@drawable/news_list_item_selector"
         android:cacheColorHint="#00000000"
         android:divider="@drawable/list_separator_line">
-
         </ListView>
 
 </LinearLayout>
