新闻客户端主界面以及详细信息也买了已经完成，接下来要升级详细信息页面

--- a/src/main/res/values/arrays.xml
+++ b/src/main/res/values/arrays.xml
@@ -11,5 +11,15 @@
         <item>财经</item>
         <item>游戏</item>
         <item>女人</item>
+        <item>焦点</item>
+        <item>国内</item>
+        <item>国际</item>
+        <item>军事</item>
+        <item>体育</item>
+        <item>科技</item>
+        <item>汽车</item>
+        <item>财经</item>
+        <item>游戏</item>
+        <item>女人</item>
     </string-array>
 </resources>
